fixes navbar overlap on small screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,7 +33,8 @@ app-navbar {
 
 @media (max-width: 720px) {
   .page {
-    top: 112px;
+    top: 168px;
+
   }
 
   }
